# Cuda_Histogram

./: CMakeLists.txt  Makefile  Makefile_windows  README.md  convolution  output.txt
include/: histogram_normalizer.hpp  tools.hpp
include/chrono/: chronoCPU.hpp  chronoGPU.hpp
include/device/: device.hpp
include/devices/: device.hpp
include/kernels/: kernel.hpp
include/processing/: process.hpp  process_RGB_to_HSV.hpp  process_normalized.hpp
include/utils/: common.hpp  conv_utils.hpp
src/: conv_utils.cpp  histogram_normalizer.cu  main.cu  tools.cpp
src/chrono/: chronoCPU.cpp  chronoGPU.cu
src/device/: device.cu
src/kernels/: kernel.cu
src/processing/: process.cu  process_HSV_to_RGB.cu  process_RGB_to_HSV.cu  process_normalized.cu
src/utils/: conv_utils.cpp  tools.cpp
