CMAKE_MINIMUM_REQUIRED(VERSION 3.8 FATAL_ERROR)

PROJECT(Histogram_project LANGUAGES CXX CUDA)

SET(CMAKE_CUDA_STANDARD 11)
SET(CMAKE_CUDA_STANDARD_REQUIRED ON)

FIND_PACKAGE(CUDA REQUIRED)

SET(SOURCE_DIR ${CMAKE_SOURCE_DIR}/src/)
SET(INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include/)
SET(IMAGE_DIR ${CMAKE_SOURCE_DIR}/images/)
SET(ARGS_HISTO "-f" "${IMAGE_DIR}/chateau.png")
SET(TARGET_NAME histogram)


FILE(GLOB_RECURSE SOURCE_FILES ${SOURCE_DIR}*.cpp)
FILE(GLOB_RECURSE CUDA_FILES ${SOURCE_DIR}*.cu)
FILE(GLOB_RECURSE INCLUDE_FILES ${INCLUDE_DIR}*.hpp)

INCLUDE_DIRECTORIES(
        ${CUDA_INCLUDE_DIRS}
        ${INCLUDE_DIR}
)


#EXECUTE_PROCESS(COMMAND "${CMAKE_COMMAND}/${TARGET_NAME}" "${ARGS_HISTO}"        WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}")


ADD_EXECUTABLE(${TARGET_NAME} ${SOURCE_FILES} ${INCLUDE_FILES} ${CUDA_FILES})
SET(
        CUDA_NVCC_FLAGS
        ${CUDA_NVCC_FLAGS}
        -O3
        -gencode arch=compute_61,code=sm_61
)
TARGET_COMPILE_OPTIONS(
        ${TARGET_NAME} PRIVATE
        -g
        -O3
)

